Jumbotron main style structure

--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
 
       <!-- INIZIO DEL MAIN -->
       <main>
-        <!-- prima row -->
+        <!-- prima section -->
         <section class="jumbotron">
-          <h4>Questa &eacute; la prima row</h4>
+          <div class="layover"></div>
+          <div class="brand_claim">
+            <h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit <br>
+              sed do eiusmod tempor
+            </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,...  </p>
+          </div>
         </section>
 
         <!-- seconda row -->
