Main style columns and footer structure

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <div id="container">
 
       <header>
+        <!-- logo -->
         <a href="home_page">
           <span class="logo">
             <img src="img/logo.png" alt="">
           </span>
         </a>
 
+        <!-- navbar -->
         <ul>
           <li> <a href="#">Futures</a> </li>
           <li> <a href="#">Editorials</a> </li>
@@ -33,36 +35,58 @@
       <main>
         <!-- prima section -->
         <section class="jumbotron">
+
           <div class="layover"></div>
           <div class="brand_claim">
             <h3>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit <br>
               sed do eiusmod tempor
             </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,...  </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...  </p>
           </div>
+
         </section>
 
-        <!-- seconda row -->
+        <!-- seconda section -->
         <section class="row">
 
           <div class="topside">
-            <h1>Qui andr&agrave; un titolo</h1>
-            <h5>qui andr&agrave; un sottotitolo</h5>
+            <h1>Leadership</h1>
+            <h5>lorem ipsum dolor color one</h5>
           </div>
 
           <div class="bottomside">
-
+            <!-- left column -->
             <div class="aside">
-              <h4>Aside left</h4>
+              <div class="column_icon left">
+                <div class="layover"></div>
+              </div>
+
+              <h3 class="column_title">Lorem</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
             </div>
 
+            <!-- center column -->
             <div class="center">
-              <h4>Center side</h4>
+              <div class="column_icon middle">
+                <div class="layover"></div>
+              </div>
+
+              <h3 class="column_title">Lorem</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
+            <!-- right clumn -->
             <div class="aside">
-              <h4>Aside right</h4>
+              <div class="column_icon right">
+                <div class="layover"></div>
+              </div>
+
+              <h3 class="column_title">Lorem</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
           </div>
@@ -71,7 +95,7 @@
       </main>
       <!-- FINE DEL MAIN -->
       <footer>
-        <h4>Questo &eacute; il footer</h4>
+        <span>Made with <span id="heart">&hearts;</span></span>
       </footer>
 
     </div>
